@@ -19,11 +19,14 @@
 
 		<ul>
 			<li>[Feature] Option to use single connection for browser and transfers [<a href="http://trac.cyberduck.ch/ticket/57">#57</a>]</li>
-			<li>[Feature] Option to remember open browser windows and reconnect upon relaunching the application [--]</li>
+			<li>[Feature] Option to remember open browser windows and reconnect upon relaunching the application [<a href="http://trac.cyberduck.ch/ticket/59">#59</a>]</li>
 			<li>[Feature] Delay for spring-loaded folders can be set [<a href="http://trac.cyberduck.ch/ticket/633">#633</a>]</li>
 			<li>[Feature] Calculate size of directory [<a href="http://trac.cyberduck.ch/ticket/5">#5</a>]</li>
+			<li>[Feature] Duplicate files using option-drag [<a href="http://trac.cyberduck.ch/ticket/150">#150</a>]</li>
 			<li>[Feature] Per bookmark setting for download folder [<a href="http://trac.cyberduck.ch/ticket/158">#158</a>]</li>
 			<li>[Feature] Per bookmark setting to use single connection for browser and transfers [#--]</li>
+			<li>[Feature] Advanced settings in connection and bookmark window in disclosable view</li>
+			<li>[Feature] Added PageSpinner to the list of supported editors (http://www.optima-system.com/pagespinner) [#205]</li>
 			<li>[Bugfix] Disconnecting in the background not blocking the user interface [#--]</li>
 			<li>[Bugfix] Folders marked as inaccessible after timeouts and cannot be opened after reconnecting [<a href="http://trac.cyberduck.ch/ticket/611">#611</a>]</li>
 			<li>[Bugfix] Applescript/Dashboard should not use seperate session for transfers [#--]</li>
