@@ -6,11 +6,14 @@ Cyberduck is an open source SFTP (SSH Secure File Transfer) and FTP browser lice
 
 2.7.2 [http://trac.cyberduck.ch/query?status=closed&milestone=2.7.2]
 - [Feature] Option to use single connection for browser and transfers [#57]
-- [Feature] Option to remember open browser windows and reconnect upon relaunching the application [--]
+- [Feature] Option to remember open browser windows and reconnect upon relaunching the application [#59]
 - [Feature] Delay for spring-loaded folders can be set [#633]
 - [Feature] Calculate size of directory [#5]
+- [Feature] Duplicate files using option-drag [#150]
 - [Feature] Per bookmark setting for download folder [#158]
 - [Feature] Per bookmark setting to use single connection for browser and transfers [#--]
+- [Feature] Advanced settings in connection and bookmark window in disclosable view 
+- [Feature] Added PageSpinner to the list of supported editors (http://www.optima-system.com/pagespinner) [#205]
 - [Bugfix] Disconnecting in the background not blocking the user interface [#--]
 - [Bugfix] Folders marked as inaccessible after timeouts and cannot be opened after reconnecting [#611]
 - [Bugfix] Applescript/Dashboard should not use seperate session for transfers [#--]
